[package]
name = "sol"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "3.0.0"
solana-sdk = "3.0.0"
spl-token = "9.0.0"
solana-client = "3.1.4"
spl-token-2022 = "10.0"
solana-system-interface =  { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account = "8.0.0"
spl-token-metadata-interface = "0.8"
spl-token-2022-interface = "2.1"
tokio.workspace = true
bincode.workspace = true
